fix bug on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  /* Your default theme */
-  --background: white;
-  --foreground: black;
-}
-
-[data-theme="dark"] {
-  --background: black;
-  --foreground: white;
+[data-theme="dark"],
+[data-theme="dark"] body {
+  color: #fff;
+  background: #141332;
 }
